<resources>
    <!-- app and activities -->
    <string name="app_name">Long Shoot Alpha</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sequence">Capture Sequence</string>

    <!-- content camera control -->
    <string name="fragment_camera_control_button_sequence">Sequence</string>
    <string name="fragment_camera_control_button_settings">Settings</string>
    <string name="fragment_camera_control_button_sequence_compact">Seq.</string>
    <string name="fragment_camera_control_button_settings_compact">Set.</string>
    <string name="fragment_camera_control_button_capture">CAPTURE</string>
    <string name="fragment_camera_control_button_capture_capturing">&#8230;</string>
    <string name="fragment_camera_control_button_capture_sequencing">&#8230;STOP</string>

    <!-- content capture parameters indicator -->
    <string name="fragment_parameters_indicator_button_exposureTime">S.S.\n%s</string>
    <string name="fragment_parameters_indicator_button_exposureTime_auto">S.S.\nAUTO</string>

    <string name="fragment_parameters_indicator_button_sensitivity">ISO\n%d</string>
    <string name="fragment_parameters_indicator_button_sensitivity_auto">ISO\nAUTO</string>

    <string name="fragment_parameters_indicator_button_aperture">f\nf/%.1f</string>
    <string name="fragment_parameters_indicator_button_aperture_auto">f\nAUTO</string>

    <string name="fragment_parameters_indicator_button_flash">Fl.\n%s</string>
    <string name="fragment_parameters_indicator_button_whiteBalance">W.B.\n%s</string>
    <string name="fragment_parameters_indicator_button_opticalImageStabilization">OIS\n%s</string>
    <string name="fragment_parameters_indicator_button_focalLength">F.L.\n%.2fmm</string>

    <string name="fragment_parameters_indicator_button_focusDistance">F.D.\n%s</string>
    <string name="fragment_parameters_indicator_button_focusDistance_auto">F.D.\nAUTO</string>

    <!-- content capture parameter range control -->
    <string name="textView_range_control_title">Range Control Title</string>
    <string name="textView_range_control_title_exposureTime">Shutter Speed</string>
    <string name="textView_range_control_title_sensitivity">ISO</string>
    <string name="textView_range_control_title_focusDistance">Focus Distance</string>
    <string name="textView_range_control_valueMinimum">MIN\n%s</string>
    <string name="textView_range_control_valueMaximum">MAX\n%s</string>
    <string name="textView_range_control_zoomOut">-</string>
    <string name="textView_range_control_zoomIn">+</string>
    <string name="button_range_control_apply">OK</string>
    <string name="checkBox_range_control_auto">AUTO</string>

    <!-- content capture parameter list control -->
    <string name="textView_list_control_title">List Control Title</string>
    <string name="textView_list_control_title_aperture">Aperture</string>
    <string name="textView_list_control_title_autoWhiteBalance">White Balance</string>
    <string name="textView_list_control_title_opticalStabilization">Optical Image Stabilization</string>
    <string name="textView_list_control_title_focalLength">Focal Length</string>
    <string name="button_list_control_dismiss">Dismiss</string>

    <!-- menu_activity_settings -->
    <string name="action_settings_about">About</string>

    <!-- menu_activity_sequence -->
    <string name="action_sequence_start">Start</string>
    <string name="action_sequence_loop">Loop</string>
    <string name="action_sequence_clear">Clear All</string>


    <!-- preferences category: capture & storage -->
    <string name="preference_category_title_capture_and_storage">Capture &amp; Storage</string>

    <string name="preference_title_raw_capture">RAW Capture</string>
    <string name="preference_summary_raw_capture">Capture in RAW format, otherwise JPEG.  Needs to reload the APP for now (because of dev state).</string>

    <string name="preference_title_focus_assistant">Focus Assistant</string>
    <string name="preference_summary_focus_assistant">Zoom in preview when using manual focus.</string>

    <string name="preference_title_preview_exposure_time_limit">Limit Exposure Time for Preview</string>
    <string name="preference_summary_preview_exposure_time_limit">Using long exposure time in preview will cause high latency between captureRequest been submitted and performed.</string>
    <string name="preference_title_preview_exposure_time_limit_value">Preview exposure time limit (s)</string>

    <!-- preferences category: experimental & temporary -->
    <string name="preference_category_title_experimental_and_temporary">Experimental &amp; Temporary</string>

    <string name="preference_title_capture_exposure_time_limit">Limit Capture Exposure Time</string>
    <string name="preference_summary_capture_exposure_time_limit">If this option is enabled, you can set a greater exposure value through the input box.  Theoretically, any value greater than the maximum will be cut down.  However, not like what is in the documentation, it just become more unstable as the value exceeding the maximum.</string>

    <string name="preference_title_consecutive_capture">Consecutive Capture</string>
    <string name="preference_summary_consecutive_capture">Capture consecutively.  (This option stays before Capture Sequence function is finished.)</string>

    <string name="preference_title_consecutive_capture_interval">Set Interval Between Captures</string>
    <string name="preference_summary_consecutive_capture_interval">Temporary solution for time lapse.</string>
    <string name="preference_title_consecutive_capture_interval_value">Interval Length (s)</string>

</resources>
