<?xml version ="1.0" encoding ="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_title_capture_and_storage">

        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_key_raw_capture"
            android:summary="@string/preference_summary_raw_capture"
            android:title="@string/preference_title_raw_capture" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_key_focus_assistant"
            android:summary="@string/preference_summary_focus_assistant"
            android:title="@string/preference_title_focus_assistant" />

    </PreferenceCategory>

    <!--
    TODO list:
    max preview resolution
    store file name
    store file path
    max preview exposure time (prevent shutter lag)
    -->

</PreferenceScreen>
