<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_range_control_title"
        style="@style/CameraTheme.TextAccentColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView_range_control_title"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_range_control_range"
        app:layout_constraintStart_toStartOf="@+id/seekBar_range_control_range"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_range_control_information"
        style="@style/CameraTheme.TextAccentColorDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView_range_control_valueMaximum"
        app:layout_constraintStart_toEndOf="@+id/textView_range_control_valueMinimum"
        app:layout_constraintTop_toBottomOf="@+id/textView_range_control_title" />

    <SeekBar
        android:id="@+id/seekBar_range_control_range"
        style="@style/CameraTheme.SeekBarAccentColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:max="10000"
        android:min="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_range_control_information" />

    <TextView
        android:id="@+id/textView_range_control_valueMinimum"
        style="@style/CameraTheme.TextAccentColorDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_range_control_valueMinimum"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_range_control_range"
        app:layout_constraintStart_toStartOf="@+id/seekBar_range_control_range" />

    <TextView
        android:id="@+id/textView_range_control_valueMaximum"
        style="@style/CameraTheme.TextAccentColorDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_range_control_valueMaximum"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_range_control_range"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_range_control_range" />

    <Button
        android:id="@+id/button_range_control_apply"
        style="@style/CameraTheme.ButtonColoredAccentColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/button_range_control_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_range_control_range"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_range_control_range" />

    <CheckBox
        android:id="@+id/checkBox_range_control_auto"
        style="@style/CameraTheme.CheckBoxAccentColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/checkBox_range_control_auto"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_range_control_apply"
        app:layout_constraintStart_toStartOf="@+id/seekBar_range_control_range" />

    <EditText
        android:id="@+id/editText_range_control_value"
        style="@style/CameraTheme.EditTextAccentColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_range_control_apply"
        app:layout_constraintEnd_toStartOf="@+id/button_range_control_apply"
        app:layout_constraintStart_toEndOf="@+id/checkBox_range_control_auto" />

</androidx.constraintlayout.widget.ConstraintLayout>