<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet_capture_parameter_range_control"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_range_control_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:text="@string/textView_range_control_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar_range_control_seekBar"
                style="@android:style/Widget.Material.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:max="10000"
                android:min="0"
                android:progressBackgroundTint="@color/colorPrimary"
                android:progressTint="@color/colorPrimary"
                android:thumbTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_range_control_title" />

            <TextView
                android:id="@+id/textView_range_control_valueMinimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:fontFamily="monospace"
                android:text="@string/textView_range_control_valueMinimum"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryVariant"
                app:layout_constraintBottom_toTopOf="@+id/seekBar_range_control_seekBar"
                app:layout_constraintStart_toStartOf="@+id/seekBar_range_control_seekBar" />

            <TextView
                android:id="@+id/textView_range_control_valueMaximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="monospace"
                android:text="@string/textView_range_control_valueMaximum"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryVariant"
                app:layout_constraintBottom_toTopOf="@+id/seekBar_range_control_seekBar"
                app:layout_constraintEnd_toEndOf="@+id/seekBar_range_control_seekBar" />

            <Button
                android:id="@+id/button_range_control_apply"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="monospace"
                android:minWidth="48dp"
                android:text="@string/button_range_control_apply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/seekBar_range_control_seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar_range_control_seekBar" />

            <CheckBox
                android:id="@+id/checkBox_range_control_auto"
                style="@android:style/Widget.Material.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"
                android:fontFamily="monospace"
                android:text="@string/checkBox_range_control_auto"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_range_control_apply"
                app:layout_constraintStart_toStartOf="@+id/seekBar_range_control_seekBar" />

            <EditText
                android:id="@+id/editText_range_control_value"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="monospace"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryVariant"
                android:textCursorDrawable="@drawable/cursor_color_primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_range_control_apply"
                app:layout_constraintEnd_toStartOf="@+id/button_range_control_apply"
                app:layout_constraintStart_toEndOf="@+id/checkBox_range_control_auto" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>